--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "parcel ./src/index.html",
+    "build": "parcel build ./src/index.html",
     "dev": "parcel ./src/index.html",
     "format": "prettier src/**/*.{js,html} --write",
     "lint": "eslint src/**/*.js",
