--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "parcel ./src/index.html",
     "format": "prettier ./src/* --write",
+    "lint": "eslint ./src/*.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,6 +25,8 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "eslint": "^7.10.0",
+    "eslint-plugin-react": "^7.21.2",
     "parcel-bundler": "^1.12.4",
     "prettier": "^2.1.2"
   }
