--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-react": "^7.21.2",
+    "eslint-plugin-react-hooks": "^4.1.2",
     "parcel-bundler": "^1.12.4",
     "prettier": "^2.1.2"
   }
